[package]
name = "demo_3d"
version = "0.1.0"
authors = ["Mapet <jakubsordyl1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.51.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
opensimplex_noise_rs = { path  = "../../" }